# Serializor

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: release.yml
src/: _demo.py  benchmark.py  examples.py  test.py
src/serializor/: __init__.py  cipher.py  crypto.pxd  crypto.py  des.pxd  des.py  deserialize.pxd  deserialize.py  errors.py  identifier.pxd  identifier.py  prefix.pxd  prefix.py  ser.pxd  ser.py  ser.pyi  serialize.pxd  serialize.py  transcode.pxd  transcode.py  typeref.pxd  typeref.py  utils.pxd  utils.py  utils.pyi
src/serializor/binary/: __init__.py  des.pxd  des.py  des.pyi  ser.pxd  ser.py  ser.pyi
src/serializor/unicode/: __init__.py  des.pxd  des.py  des.pyi  ser.pxd  ser.py  ser.pyi
