[metadata]
name = serializor
version = 0.1.10.4
author = Jiefu Chen
author_email = keppa1991@163.com
description = Serialize common python/numpy/pandas objects.
url = https://github.com/AresJef/Serializor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = serialize, serialization, numpy, pandas, python
license = MIT license
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    # Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    Cython>=3.0.2
    cytimes>=0.1.10.25
    numpy>=1.25.2
    orjson>=3.9.5
    pandas>=2.0.3

[options.packages.find]
where = src

[build_ext]
inplace=1