[metadata]
name = serializor
version = 1.0.4
author = Jiefu Chen
author_email = keppa1991@163.com
description = Serialization for common Python objects.
url = https://github.com/AresJef/Serializor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = serialize, serialization, numpy, pandas, python
license = MIT license, Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    cryptography>=41.0.1
    cytimes>=1.0.2
    numpy>=1.25.2
    orjson>=3.10.2
    pandas>=2.1.0

[options.packages.find]
where = src

[build_ext]
inplace=1